Fixed homepage spacing

--- a/app/assets/stylesheets/about.css
+++ b/app/assets/stylesheets/about.css
@@ -25,13 +25,8 @@
   position: relative;
   display: block;
   float: left;
-  margin: 0;
-  padding: 0;
-  width: 500px;
+  width: 800px;
   height: 300px;
-  background: #ccc;
-  text-align: center;
-  line-height: 300px;
 }
 
 a.control_prev, a.control_next {
